<resources>
    <string name="app_name">example</string>
    <string name="autofill">Autofill</string>
    <string name="create_three_ds_session">Create Session</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="get_challenge_result">Get Challenge Result</string>
    <string name="clear">Clear</string>
    <string name="three_ds">3DS</string>
</resources>