...
        })

        viewModel.session.observe(viewLifecycleOwner, Observer {
            if (it !== null)
                Toast.makeText(
                    requireContext(),
                    "3DS Session Created",
                    Toast.LENGTH_LONG
                ).show()
        })

        viewModel.challengeResponse.observe(viewLifecycleOwner, Observer {

...
