...
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/token_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Token ID"
                        android:inputType="text"
                        android:text="@={viewModel.tokenId}" />

                    <Button
                        android:id="@+id/post_button"
                        android:layout_width="wrap_content"
...
