...
    OOB("04"),
}

fun UiTypes.toRavelinCode(): String = code

val transactionStatusMap: Map<String, String> = mapOf(
    "Y" to "successful",
    "A" to "attempted",
    "N" to "failed",
    "U" to "unavailable",
    "R" to "rejected",
)
