appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card 1
- tapOn: "Token ID"
- inputText: "003f69e1-99c6-4536-8808-14a2f109b203" #  4200000000000010 Visa
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Submit"
- hideKeyboard
- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "1ee130af-2396-4de5-8ef0-6845f89a96b8" #  6011000400000000 Discover
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- extendedWaitUntil:
      visible: "Purchase authentication"
      timeout: 10000
- tapOn:
      below: "Enter your code below"
- inputText: "1234"
- tapOn: "Submit"
- hideKeyboard
- assertVisible: "Challenge failed"
- tapOn:
    text: "Get Challenge Result"
    retryTapIfNoChange: false
- assertVisible: "unavailable"
- assertVisible: "cardholder-not-enrolled"
- tapOn: "Clear"
