appId: com.basistheory.threeds.example
---
- launchApp
- extendedWaitUntil:
    visible: "3DS"
    timeout: 60000

# Ravelin SDK initializes correctly

- assertVisible: "The integrity of the SDK has been tampered"
- assertVisible: "An emulator is being used to run the App"

# Card 1
- tapOn: "Token ID"
- inputText: "8b739401-8371-4a82-b49e-5ab8338ddaff" #  4200000000000013 VISA
- hideKeyboard
- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "Unable to create session, 3DS service responded 500"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "4a2a306c-1570-4dc2-adb6-297dea50bd32" #  5019717010103742 Dankort
- hideKeyboard
- tapOn:
      text: "Create Session"
      retryTapIfNoChange: false
- assertVisible: "Unable to create session, 3DS service responded 500"
- tapOn: "Clear"


